--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "electron": "9.0.2",
-    "electron-builder": "22.7.0"
+    "electron-builder": "22.7.0",
     "node-abi": "^2.18.0"
   }
 }
